# tesla-ball

./: .gitignore  Dockerfile  README.md  entrypoint.sh  log_conf.yml  migrate.py  protoc.py  pyproject.toml  serve.py
migrations/models/: 0_20231010185631_init.py  0_20231010224619_init.py  1_20231010224020_add_datetimes.py  1_20231011003031_add_datetimes_to_inbound_order.py  2_20231011014200_add_order_state_paid.py  3_20231011014614_add_nullable_fields_to_inbound_order.py  4_20231011032704_extend_length_of_inbound_order_invoice.py  5_20231017161337_add_state_to_orders.py  6_20231017161803_rename_invoice_to_bolt11.py
protos/: invoices.proto  walletkit.proto
src/: __init__.py  configs.py  schema.py  schemas.py
src/helpers/: __init__.py  bscript.py
src/jobs/: __init__.py  channel_open.py  invoice_check.py  swap_frisk.py  txn_confirm.py
src/middlewares/: __init__.py  channel_scheduler.py  scheduler.py  tick_scheduler.py
src/models/: __init__.py  earn_order.py  inbound_order.py  order.py  order_state.py  swap_order.py
src/protos/: __init__.py  lightning_pb2.py  lightning_pb2_grpc.py
src/routes/: __init__.py  earn.py  inbound.py  info.py  swap.py
src/services/: __init__.py  chain_kit.py  lightning.py  lightning_pb2.py  lightning_pb2_grpc.py  macaroon_plugin.py  wallet_kit.py  walletkit.py
src/tasks/: __init__.py  demo.py  open_channel.py
static/: billboard.base64  tesla-ball.base64
tests/: __init__.py  inbound.py
tests/fees/: __init__.py  inbound.py
tests/grpc/: __init__.py  best_block.py  channel_open.py  estimate_fee.py  fee_report.py  get_info.py  list_channels.py  list_invoices.py  list_peers.py  pending_channels.py  request_address.py  send_coins.py  send_payment.py  wallet_balance.py
tests/jobs/: __init__.py  channel.py  channel_open.py  invoice_check.py  txn_confirm.py
tests/routes/: __init__.py  inbound.py  info.py  swap.py
tests/swaps/: __init__.py  reverse.py  submarine.py
tests/tasks/: __init__.py  channel.py
