[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.poetry]
authors = [
  "Sitt Guruvanich <aekazitt+github@gmail.com>"
]
description = "Lightning Service Provider built on top of FastAPI asynchronous web framework"
license = "MIT"
name = "tesla-ball"
packages = [
  {include="serve.py"},
  {include="src"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.103.2"
fastapi-cachette = "^0.1.4"
fastapi-csrf-protect = "^0.3.2"
googleapis-common-protos = "1.60.0"
grpcio = "^1.48.0"
grpcio-tools = "^1.48.0"
python = "^3.9"
orjson = "^3.9.7"
uvicorn = "^0.23.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
python-dotenv = "^1.0.0"
